# Prism-of-Focus

./: Cargo.toml  README.md  tenets.json
src/: components.rs  focus.rs  main.rs  styles.rs
