[package]
name = "Prism-of-Focus"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"

[dependencies]
iced = "0.14.0"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
